--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+dev.js
+prod.js
 # dependencies
 /node_modules
 /.pnp
@@ -10,7 +11,7 @@
 
 # production
 /build
-/prod.js
+.config
 
 # misc
 .DS_Store
